# Vorto-backend-rust

./: .gitignore  Cargo.toml
migrations/: 20210802190806_init.down.sql  20210802190806_init.up.sql
src/: auth.rs  common.rs  error.rs  main.rs  requests.rs  responses.rs  seed.rs  states.rs
src/db/: common.rs  game.rs  mod.rs  team.rs  team_result.rs  voc.rs  word.rs  word_definition.rs  word_result.rs
src/domain/: common.rs  enums.rs  game.rs  mod.rs  team.rs  team_result.rs  user.rs  voc.rs  word.rs  word_definition.rs  word_result.rs
src/routes/: mod.rs
src/routes/v1/: game.rs  mod.rs  ping.rs  teams.rs  vocs.rs
src/routes/v1/admin/: mod.rs  users.rs  words.rs
src/services/: game_service.rs  jwt_service.rs  mod.rs  password_hasher.rs  team_service.rs  user_service.rs  voc_service.rs  wiki_parser_service.rs  word_service.rs
tools/migrator/: Cargo.toml
tools/migrator/src/: main.rs
