[package]
name = "vorto-back-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }
dotenv = "0.15.0"
serde =  { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
argon2 = "0.3.0"
rand_core = { version = "0.6", features = ["std"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono" ] }
tokio = { version = "1.9.0", features = ["full"] }
syn = "1.0.74"
quote = "1.0.9"
strum = "0.22.0"
strum_macros = "0.22.0"
indexmap = "1.7.0"
reqwest = "0.11.4"
urlencoding = "2.1.0"
html5ever = "0.25.1"
markup5ever_rcdom = "0.1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
itertools = "0.10.1"
futures = "0.3.17"
uuid = { version = "0.8.2", features = ["v4"] }
jsonwebtokens = "1.1.0"
log = "0.4.14"
env_logger = "0.9.0"