[package]
name = "migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde =  { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono" ] }
tokio = { version = "1.9.0", features = ["full"] }
futures = "0.3.17"